<resources>
    <string name="app_name">Muuvis</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_favorite">Favorite</string>
    <string name="subtitle_onboarding_1">Jelajahi ribuan film terbaru dan klasik, dari berbagai genre. Mulai dari aksi hingga drama, temukan rekomendasi film yang sesuai dengan seleramu.</string>
    <string name="title_onboarding_1">Selamat datang di Muuvis</string>
    <string name="next">Lanjut</string>
    <string name="enter">Masuk</string>
    <string name="title_onboarding_2">Buat Daftar Filmmu</string>
    <string name="subtitle_onboarding_2">Simpan film yang ingin kamu tonton dalam daftar favoritmu. Jangan pernah ketinggalan film yang ingin kamu nikmati!</string>
    <string name="title_onboarding_3">Rating dan Ulasan</string>
    <string name="subtitle_onboarding_3">Berikan penilaian dan ulasan untuk film yang sudah kamu tonton, dan lihat rekomendasi berdasarkan minatmu</string>
    <string name="now_playing">Now Playing</string>
    <string name="see_all">See all</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="title_release_year">%1$s (%2$s)</string>
    <string name="search_film">Cari film</string>
    <string name="image_description_poster">Image poster</string>
    <string name="overview">Overview</string>
    <string name="released_on">Released on %1$s</string>
    <string name="vote_average_vote_count">%1$s (%2$s)</string>
    <string name="movie_added_to_favorite">Movie added to favorite</string>
    <string name="movie_removed_from_favorite">Movie removed from favorites</string>
    <string name="movie_not_found_please_input_another_keyword">Movie not found, please input another keyword</string>
    <string name="search_result">Search result</string>
    <string name="logout">Logout</string>
    <string name="do_you_want_to_logout_from_muuvis">Do you want to logout from Muuvis?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_settings">Settings</string>
    <string name="coming_soon">Coming soon</string>
    <string name="no_favorite_movies_added_yet">No favorite movies added yet</string>
</resources>