<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.notsatria.muuvis.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.notsatria.muuvis.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.notsatria.muuvis.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.notsatria.muuvis.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/movieDetailFragment"
        android:name="com.notsatria.muuvis.detail.MovieDetailFragment"
        android:label="MovieDetailFragment" />
</navigation>