<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_splash_screen" />

        <ImageView
            android:id="@+id/icSearch"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@null"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="@id/ivLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivLogo"
            app:srcCompat="@drawable/ic_search_white_24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp"
            android:paddingBottom="80dp">

            <TextView
                android:id="@+id/tvNowPlaying"
                style="@style/SourceSans.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/now_playing"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSeeAllNowPlaying"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/tvNowPlaying"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvNowPlaying" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmerNowPlaying"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNowPlaying">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <include layout="@layout/item_movie_poster_shimmer" />

                        <include layout="@layout/item_movie_poster_shimmer" />

                        <include layout="@layout/item_movie_poster_shimmer" />

                        <include layout="@layout/item_movie_poster_shimmer" />

                        <include layout="@layout/item_movie_poster_shimmer" />

                    </LinearLayout>

                </HorizontalScrollView>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvNowPlaying"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tvNowPlaying"
                tools:listitem="@layout/item_movie_poster" />

            <TextView
                android:id="@+id/tvPopular"
                style="@style/SourceSans.SemiBold"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/popular"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvNowPlaying" />

            <TextView
                android:id="@+id/tvSeeAllPopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/tvPopular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvPopular" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPopular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tvPopular"
                tools:listitem="@layout/item_movie_poster" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmerPopular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPopular">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <include layout="@layout/item_movie_poster_shimmer" />

                        <include layout="@layout/item_movie_poster_shimmer" />

                        <include layout="@layout/item_movie_poster_shimmer" />

                        <include layout="@layout/item_movie_poster_shimmer" />

                        <include layout="@layout/item_movie_poster_shimmer" />

                    </LinearLayout>

                </HorizontalScrollView>

            </com.facebook.shimmer.ShimmerFrameLayout>


            <TextView
                android:id="@+id/tvTopRated"
                style="@style/SourceSans.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/top_rated"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvPopular" />

            <TextView
                android:id="@+id/tvSeeAllTopRated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/tvTopRated"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvTopRated" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTopRated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tvTopRated"
                tools:listitem="@layout/item_movie_poster" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmerTopRated"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTopRated">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <include layout="@layout/item_movie_poster_shimmer" />

                        <include layout="@layout/item_movie_poster_shimmer" />

                        <include layout="@layout/item_movie_poster_shimmer" />

                        <include layout="@layout/item_movie_poster_shimmer" />

                        <include layout="@layout/item_movie_poster_shimmer" />

                    </LinearLayout>

                </HorizontalScrollView>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <TextView
                android:id="@+id/tvUpcoming"
                style="@style/SourceSans.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/upcoming"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvTopRated" />

            <TextView
                android:id="@+id/tvSeeAllUpcoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/tvUpcoming"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvUpcoming" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUpcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tvUpcoming"
                tools:listitem="@layout/item_movie_poster" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmerUpcoming"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvUpcoming">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <include layout="@layout/item_movie_poster_shimmer" />

                        <include layout="@layout/item_movie_poster_shimmer" />

                        <include layout="@layout/item_movie_poster_shimmer" />

                        <include layout="@layout/item_movie_poster_shimmer" />

                        <include layout="@layout/item_movie_poster_shimmer" />

                    </LinearLayout>

                </HorizontalScrollView>

            </com.facebook.shimmer.ShimmerFrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
